Fix some issues