@@ -9,6 +9,10 @@
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>dev.mccue</groupId>
@@ -61,6 +65,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <release>18</release>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
